fixed font and spacing

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=EB+Garamond');
 * {
-    font-family: 'Source Serif Pro', serif;
+    font-family: 'EB Garamond', serif;
 }
 
 body {
@@ -8,8 +8,6 @@ body {
     color: black;
     min-height: 100vh;
     display: block;
-    /* grid-template-columns: auto auto;
-    grid-template-rows: 1fr 2fr min-content; */
     position: relative;
     padding-bottom: 100px; 
     margin-bottom: 2rem;
